            - A method 'button_menu.ButtonsRegistry.unregister()' has been added.
            - A method 'custom_form.CustomFormDescriptorRegistry.unregister()' has been added.
            - A method 'mass_import.FormRegistry.unregister()' has been added.
            - A method 'merge._MergeFormRegistry.unregister()' has been added.
        # Apps :
            * Activities:
                - The models 'ActivityType' & 'ActivitySubType' now inherit 'creme_core.models.MinionModel' (see <Breaking changes> part too).
                - Upgrade FullCalendar :
                    - Use ISO8601 format WITH timezone (e.g 2023-04-14T10:38:30+01:00) for the views:
                         - activities__calendars_activities
                         - activities__set_activity_dates
                    - Display "busy" events (no collision) with a stripped background.
                    - Support timezone provided by the user information instead of browser.
            * Reports:
                - 'creme.D3TubeChart' now supports color field from data. 
            * Sketch:
                - New 'creme.D3LineChart' to draw curved line with (optional) dots and tooltips.
                - New 'creme.d3Tooltip' chart component that allows to render HTML tooltips.
                - New 'creme.d3BisectScale' that retrieve the value scale source value from the position in a chart.
                - 'creme.D3PieChart' now supports color field from data.
                - New 'd3.radialAxisInner' & 'd3.radialAxisOuter' functions that draws axis for gauge meters.

    Breaking changes :
    ------------------
        # Deprecated stuffs which have been removed :
            - In 'creme_core.core' :
                - In the class 'entity_cell.EntityCell' (& child classes), the methods
                  'render_html()' & 'render_csv()' have been removed.
                - In the class 'function_field.FunctionFieldResult' (& child classes), the methods