@@ -1,9 +1,10 @@
 {% load i18n creme_perms %}
+
 {% with link_perm=user|has_perm_to_link:object %}
 {% if button.is_allowed and link_perm %}
-<a class="menu_button menu-button-icon" title="{{button.description}}"
+<a class="menu_button menu-button-icon" title="{{button.description}}" data-action="redirect"
 {#   href="{% url 'activities__create_related_activity' object.id %}?callback_url={{request.get_full_path}}{% if button.activity_type %}&activity_type={{button.activity_type}}{% endif %}"> #}
-   href="{% url 'activities__create_related_activity' object.id %}?callback_url={{request.get_full_path}}{% if button.type_uuid %}&activity_type={{button.type_uuid}}{% endif %}">
+   href="{% url 'activities__create_related_activity' object.id %}?callback_url=${location}{% if button.type_uuid %}&activity_type={{button.type_uuid}}{% endif %}">
     {{button.icon.render}}{{button.verbose_name}}
 </a>
 {% else %}
