@@ -1,6 +1,6 @@
 {% extends 'creme_core/bricks/base/base.html' %}
 {% load i18n creme_bricks creme_ctype creme_perms creme_widgets %}
-{% load url from creme_core_tags%}{# url_join #}
+{% load url from creme_core_tags %}
 
 {% block brick_extra_class %}brick-hat brick-hat-card{% endblock %}
 
@@ -91,14 +91,7 @@
                   {% with edit_url=object.get_edit_absolute_url %}
                     {% if edit_url %}
                     <div class='card-action'>
-                      {% if edit_perm %}
-{#                        <a class="card-button card-button-icon" href="{% url_join edit_url callback_url=request.get_full_path %}" > #}
-                        <a class="card-button card-button-icon" href="{{edit_url}}" >{# Beware of callback URL after a brick reloading #}
-                      {% else %}
-                        <a class="card-button card-button-icon forbidden is-disabled">
-                      {% endif %}
-                            {% translate 'Edit' as label %}{% widget_icon name='edit' size='brick-hat-card-button' label=label %}{{label}}
-                        </a>
+                      {% brick_card_button action='redirect' icon='edit' label=_('Edit') url=edit_url enabled=edit_perm comeback=True %}
                     </div>
                     {% endif %}
                   {% endwith %}
