@@ -18,7 +18,7 @@
 {% block brick_header_actions %}
   {% if cells %}
     {% inner_edition_uri instance=object cells=cells as edition_uri %}
-    {% brick_header_action id='edit' url=edition_uri enabled=user|has_perm_to_change:object %}
+    {% brick_header_action id='edit' url=edition_uri enabled=user|has_perm_to_change:object comeback=True %}
   {% endif %}
 {% endblock %}
 
