@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2015-2023  Hybird
+#    Copyright (C) 2015-2024  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -147,6 +147,7 @@ def brick_action(context, id, url='',
                  label=None, icon=None, icon_size='brick-action', display='icon',
                  enabled=True,
                  confirm=None, loading=None, help_text=None,
+                 comeback=False,
                  **kwargs):
     """Create a Creme-action (i.e. link/button related to JavaScript code) made
     for use in a brick.
@@ -213,6 +214,10 @@ def brick_action(context, id, url='',
            Default is None.
     @param loading: Loading message.
     @param help_text: String. Same as label if not defined.
+    @param comeback: Boolean. If true the action will add to the given 'url' a GET argument
+           'callback_url' with the current location (client side). Used to keep the visitor mode
+           even when editing an entity in a full page form.
+           Default is False.
     @param kwargs:
            These keys have a precise meaning:
                 - 'type': String used to generate the CSS class "action-type-{{action_type}}" ;
@@ -269,6 +274,9 @@ def brick_action(context, id, url='',
 
     if confirm:
         action_options['confirm'] = confirm
+
+    if comeback:
+        action_options['comeback'] = comeback
 
     action_extra_data = _clean_extra_data(kwargs)
     data = {
