@@ -51,7 +51,7 @@
           {% if cells %}{% inner_edition_uri instance=contact cells=cells callback_url=object.get_absolute_url as edition_uri %}
             {% brick_table_action id='edit' url=edition_uri label=_('Edit this contact') enabled=user|has_perm_to_change:contact %}
           {% else %}
-            {% brick_table_action id='redirect' url=contact.get_edit_absolute_url|add:'?callback_url=${location}' label=_('Edit this contact') icon='edit' enabled=user|has_perm_to_change:contact %}
+            {% brick_table_action id='redirect' url=contact.get_edit_absolute_url label=_('Edit this contact') icon='edit' enabled=user|has_perm_to_change:contact comeback=True %}
           {% endif %}
         </td>
         <td {% brick_table_data_status action %}>
