@@ -47,7 +47,7 @@
           {% if cells %}{% inner_edition_uri instance=product cells=cells callback_url=object.get_absolute_url as edition_uri %}
             {% brick_table_action id='edit' url=edition_uri label=_('Edit this product') enabled=user|has_perm_to_change:product %}
           {% else %}
-            {% brick_table_action id='redirect' url=product.get_edit_absolute_url|add:'?callback_url=${location}' label=_('Edit this product') icon='edit' enabled=user|has_perm_to_change:product %}
+            {% brick_table_action id='redirect' url=product.get_edit_absolute_url label=_('Edit this product') icon='edit' enabled=user|has_perm_to_change:product comeback=True %}
           {% endif %}
         </td>
         <td {% brick_table_data_status action %}>
