@@ -44,10 +44,11 @@
         {% endif %}
         <td {% brick_table_data_status action %}>
 {#          {% if cells %}{% inner_edition_uri instance=service cells=cells callback_url=request.get_full_path as edition_uri %} #}
-          {% if cells %}{% inner_edition_uri instance=service cells=cells callback_url=object.get_absolute_url as edition_uri %}
-            {% brick_table_action id='edit' url=edition_uri label=_('Edit this service') enabled=user|has_perm_to_change:service %}
+          {% if cells %}
+            {% inner_edition_uri instance=service cells=cells as edition_uri %}
+            {% brick_table_action id='edit' url=edition_uri label=_('Edit this service') enabled=user|has_perm_to_change:service comeback=True %}
           {% else %}
-            {% brick_table_action id='redirect' url=service.get_edit_absolute_url|add:'?callback_url=${location}' label=_('Edit this service') icon='edit' enabled=user|has_perm_to_change:service %}
+            {% brick_table_action id='redirect' url=service.get_edit_absolute_url label=_('Edit this service') icon='edit' enabled=user|has_perm_to_change:service comeback=True %}
           {% endif %}
         </td>
         <td {% brick_table_data_status action %}>
